--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -21,20 +21,21 @@ jobs:
           cd Test
           ls -la /home/runner/work/sample-app/sample-app
           # git checkout -B main
-          shopt -s dotglob
+          # shopt -s dotglob
           cp -R /home/runner/work/sample-app/sample-app/* /home/runner/work/Test
-          shopt -u dotglob
+          cp -R /home/runner/work/sample-app/sample-app/.github /home/runner/work/Test
+          # shopt -u dotglob
           # rsync -av --exclude="Test" /home/runner/work/sample-app/sample-app/* /home/runner/work/Test 
           cd /home/runner/work/Test
           ls -la /home/runner/work/Test
-          git remote set-url --add origin https://github.com/Seconddemo/Test.git
-          git config --global user.name "Seconddemo"
-          git config --global user.email "somad56045@gienig.com"
-          # git init
-          # git remote add origin https://github.com/Seconddemo/Test.git
-          git add .
-          # git commit -m "first" || true
-          git switch -c demo_new
-          # git pull origin main
-          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
+          # git remote set-url --add origin https://github.com/Seconddemo/Test.git
+          # git config --global user.name "Seconddemo"
+          # git config --global user.email "somad56045@gienig.com"
+          # # git init
+          # # git remote add origin https://github.com/Seconddemo/Test.git
+          # git add .
+          # # git commit -m "first" || true
+          # git switch -c demo_new
+          # # git pull origin main
+          # git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
           
