--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -23,7 +23,7 @@ jobs:
           # git checkout -B main
           # shopt -s dotglob
           cp -R /home/runner/work/sample-app/sample-app/* /home/runner/work/Test
-          cp -R /home/runner/work/sample-app/sample-app/.github /home/runner/work/Test
+          cp -R /home/runner/work/sample-app/sample-app/.* /home/runner/work/Test/
           # shopt -u dotglob
           # rsync -av --exclude="Test" /home/runner/work/sample-app/sample-app/* /home/runner/work/Test 
           cd /home/runner/work/Test
@@ -34,8 +34,8 @@ jobs:
           # git init
           # git remote add origin https://github.com/Seconddemo/Test.git
           git add .
-          # git commit -m "first" || true
-          git switch -c demo_new
+          git commit -m "first" || true
+          git switch -c demo_new2
           # git pull origin main
-          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
+          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new2
           
