--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -22,8 +22,8 @@ jobs:
           ls -la /home/runner/work/sample-app/sample-app
           # git checkout -B main
           # shopt -s dotglob
-          cp -R /home/runner/work/sample-app/sample-app/* /home/runner/work/Test
-          cp -R /home/runner/work/sample-app/sample-app/.github /home/runner/work/Test/
+          cp -R /home/runner/work/sample-app/sample-app/. /home/runner/work/Test
+          # cp -R /home/runner/work/sample-app/sample-app/.github /home/runner/work/Test/
           # shopt -u dotglob
           # rsync -av --exclude="Test" /home/runner/work/sample-app/sample-app/* /home/runner/work/Test 
           cd /home/runner/work/Test
