--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -33,6 +33,7 @@ jobs:
           git config --global user.name "Seconddemo"
           git config --global user.email "somad56045@gienig.com"
           git remote -v
+          git status
           # # git init
           # # git remote add origin https://github.com/Seconddemo/Test.git
           # git add .
