--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -30,7 +30,8 @@ jobs:
           cd /home/runner/work/Test
           ls -la /home/runner/work/Test/
           git remote remove origin
-          git remote set-url --add origin https://github.com/Seconddemo/Test.git
+          git remote add origin https://github.com/Seconddemo/Test.git
+          # git remote set-url --add origin https://github.com/Seconddemo/Test.git
           git config --global user.name "Seconddemo"
           git config --global user.email "somad56045@gienig.com"
           git remote -v
