--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -38,10 +38,10 @@ jobs:
           # git status
           # # # git init
           # # # git remote add origin https://github.com/Seconddemo/Test.git
-          # git add .
-          # git commit -m "first" || true
-          # git status
-          # git switch -c demo_new2
+          git add .
+          git commit -m "first" || true
+          git status
+          git switch -c demo_new
           # # git pull origin main
           # git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new2
           
