--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -43,5 +43,5 @@ jobs:
           git status
           git switch -c demo_new
           # # git pull origin main
-          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
+          git push origin demo_new
           
