--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -42,6 +42,6 @@ jobs:
           git commit -m "first" || true
           git status
           git switch -c demo_new
-          # # git pull origin main
-          git push -u origin demo_new
+          git pull origin demo
+          # git push origin demo_new
           
