--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -43,6 +43,8 @@ jobs:
           git status
           git switch -c demo_new
           git remote -v
+          git add .
+          git commit -m "first" || true
           # git pull origin demo
-          # git push origin demo_new
+          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
           
