--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -1,4 +1,4 @@
-name: Copy Branch
+name: Final Copy
 
 on:
   push:
@@ -17,36 +17,18 @@ jobs:
       
         run: |
           cd /home/runner/work
-          git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
-          cd Test
+          git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test1.git
+          cd Test1
           ls -la /home/runner/work/sample-app/sample-app
-          # git checkout -B main
-          # tar -cf - -C /home/runner/work/sample-app/sample-app . | tar -xf - -C /home/runner/work/Test
-          # shopt -s dotglob
-          rsync -av /home/runner/work/sample-app/sample-app/. /home/runner/work/Test/
-          # cp -R /home/runner/work/sample-app/sample-app/.github /home/runner/work/Test/
-          # shopt -u dotglob
-          # rsync -av --exclude="Test" /home/runner/work/sample-app/sample-app/* /home/runner/work/Test 
+          rsync -av /home/runner/work/sample-app/sample-app /home/runner/work/Test/
           cd /home/runner/work/Test
-          ls -la /home/runner/work/Test/
           git remote remove origin
-          git remote add origin https://github.com/Seconddemo/Test.git
-          # git remote set-url --add origin https://github.com/Seconddemo/Test.git
+          git remote add origin https://github.com/Seconddemo/Test1.git
           git config --global user.name "Seconddemo"
           git config --global user.email "somad56045@gienig.com"
-          git remote -v
-          # git status
-          # # # git init
-          # # # git remote add origin https://github.com/Seconddemo/Test.git
           git add .
           git commit -m "first" || true
-          git status
-          git switch -c demo_new
-          git remote -v
-          git add .
-          git commit -m "first" || true
-          # git pull origin demo
-          git config --global user.name "Seconddemo"
-          git config --global user.email "somad56045@gienig.com"
-          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
+          git switch -c demo
+          # git remote -v
+          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test1.git demo
           
