--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -21,7 +21,7 @@ jobs:
           cd Test1
           ls -la /home/runner/work/sample-app/sample-app
           rsync -av /home/runner/work/sample-app/sample-app /home/runner/work/Test/
-          cd /home/runner/work/Test
+          cd /home/runner/work/Test/sample-app
           git remote remove origin
           git remote add origin https://github.com/Seconddemo/Test1.git
           git config --global user.name "Seconddemo"
