--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -16,19 +16,22 @@ jobs:
       - name: Copy branch
       
         run: |
-          cd /home/runner/work
-          git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test1.git
-          cd Test1
-          ls -la /home/runner/work/sample-app/sample-app
-          rsync -av /home/runner/work/sample-app/sample-app /home/runner/work/Test
-          cd /home/runner/work/Test/sample-app
-          git remote remove origin
-          git remote add origin https://github.com/Seconddemo/Test1.git
+          cd /home/runner/work/
+          git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
+          cd Test
+          # ls -la /home/runner/work/sample-app/sample-app
+          git checkout -B main
+          # cp -R /home/runner/work/sample-app/sample-app Test
+          rsync -av /home/runner/work/sample-app/sample-app/* /home/runner/work/Test 
+          cd /home/runner/work/Test
+          git remote set-url --add origin https://github.com/Seconddemo/Test.git
           git config --global user.name "Seconddemo"
           git config --global user.email "somad56045@gienig.com"
+          # git init
+          # git remote add origin https://github.com/Seconddemo/Test.git
           git add .
-          git commit -m "first" || true
-          git switch -c demo
-          # git remote -v
-          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test1.git demo
+          git commit -m "first"
+          git switch -c demo_new
+          # git pull origin main
+          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
           
