--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -22,7 +22,7 @@ jobs:
           # ls -la /home/runner/work/sample-app/sample-app
           git checkout -B main
           # cp -R /home/runner/work/sample-app/sample-app Test
-          rsync -av /home/runner/work/sample-app/sample-app/* /home/runner/work/Test 
+          rsync -av /home/runner/work/sample-app/sample-app /home/runner/work/Test 
           cd /home/runner/work/Test
           git remote set-url --add origin https://github.com/Seconddemo/Test.git
           git config --global user.name "Seconddemo"
