--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -23,6 +23,7 @@ jobs:
           # git checkout -B main
           cp -R /home/runner/work/sample-app/* /home/runner/work/Test 
           # rsync -av /home/runner/work/sample-app/sample-app /home/runner/work/Test 
+          rm -rf /home/runner/work/Test/sample-app/.git
           cd /home/runner/work/Test
           git remote set-url --add origin https://github.com/Seconddemo/Test.git
           git config --global user.name "Seconddemo"
