--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -18,21 +18,22 @@ jobs:
         run: |
           cd /home/runner/work/
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
-          cd Test
+          cd /home/runner/work/sample-app/sample-app
+          git remote add target /home/runner/work/Test
           ls -la /home/runner/work/sample-app/
           # git checkout -B main
-          cp -R /home/runner/work/sample-app/* /home/runner/work/Test 
+          #cp -R /home/runner/work/sample-app/* /home/runner/work/Test 
           # rsync -av /home/runner/work/sample-app/sample-app /home/runner/work/Test 
-          rm -rf /home/runner/work/Test/sample-app/.git
-          cd /home/runner/work/Test
-          git remote set-url --add origin https://github.com/Seconddemo/Test.git
-          git config --global user.name "Seconddemo"
-          git config --global user.email "somad56045@gienig.com"
-          # git init
-          # git remote add origin https://github.com/Seconddemo/Test.git
-          git add .
-          git commit -m "first"
-          git switch -c demo_new
-          # git pull origin main
-          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
+          # rm -rf /home/runner/work/Test/sample-app/.git
+          # cd /home/runner/work/Test
+          # git remote set-url --add origin https://github.com/Seconddemo/Test.git
+          # git config --global user.name "Seconddemo"
+          # git config --global user.email "somad56045@gienig.com"
+          # # git init
+          # # git remote add origin https://github.com/Seconddemo/Test.git
+          # git add .
+          # git commit -m "first"
+          # git switch -c demo_new
+          # # git pull origin main
+          # git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
           
