--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -20,6 +20,7 @@ jobs:
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
           cd /home/runner/work/sample-app/sample-app
           git remote add target /home/runner/work/Test
+          git push target HEAD:temp-history
           ls -la /home/runner/work/sample-app/
           # git checkout -B main
           #cp -R /home/runner/work/sample-app/* /home/runner/work/Test 
