--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -29,12 +29,13 @@ jobs:
           rm -rf /home/runner/work/Test/sample-app/.git
           git commit -m "Copy commit history and code"
           #temp
-          it remote set-url --add origin https://github.com/Seconddemo/Test.git
+          cd /home/runner/work/Test
+          git remote set-url --add origin https://github.com/Seconddemo/Test.git
           git config --global user.name "Seconddemo"
           git config --global user.email "somad56045@gienig.com"
           git checkout -b temp-history
           git add .
-          git push origin temp-history
+          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git temp-history
 
           
           # cd /home/runner/work/Test
