--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -29,6 +29,8 @@ jobs:
           
           # git init
           # git remote add origin https://github.com/Seconddemo/Test.git
+          git config --global user.name "Seconddemo"
+          git config --global user.email "somad56045@gienig.com"
           git add .
           git commit -m "first"
           git switch -c demo_new
